added a heading and sentences
updated version

--- a/lab1.html
+++ b/lab1.html
@@ -5,7 +5,10 @@
 	<title>ITMD-361 Internet Technologies and Web Design</title>
 </head>
 <body>
-  <p>Hello world. This is my first website!</p>
-  <p>Instructions: rewrite this page by adding a few sentances about yourself. Add a heading. Post it to your github repository</p>
+  <h1>Intro</h1>
+    <p>Hello world. This is my first website!</p>
+    <p>My name is Amr. I'm Egyptian American.</p> 
+    <p>My favourite sport is soccer and I'm a big fan of Barcelona FC.</p>
+    <p>I'm a CS major and I took this class because I'm intrested in learning about web design.</p>
 </body>
 </html>
